# pharma-papers-fetcher

./: README.md  output.csv  pyproject.toml
pharma_papers/: cli.py  core.py
tests/: test_core.py
